Pull on macOS build fixes from hanzou-x/Flappy5

--- a/src/makefile.osx
+++ b/src/makefile.osx
@@ -6,8 +6,7 @@
 # Mac OS X makefile for bitcoin
 # Originally by Laszlo Hanyecz (solar@heliacal.net)
 
-CXX=llvm-g++
-DEPSDIR=/opt/local
+CXX=clang++
 
 INCLUDEPATHS= \
  -I"$(CURDIR)" \
@@ -62,13 +61,10 @@ ifdef RELEASE
 # Compile for maximum compatibility and smallest size.
 # This requires that dependencies are compiled
 # the same way.
-CFLAGS = -mmacosx-version-min=10.5 -arch i386 -O3
+CFLAGS = -mmacosx-version-min=10.9 -arch x86_64 -O3
 else
 DEBUGFLAGS = -g
 endif
-
-# osx 10.9 has changed the stdlib default to libc++. To prevent some link error, you may need to use libstdc++
-CFLAGS += -stdlib=libstdc++
 
 # ppc doesn't work because we don't support big-endian
 CFLAGS += -Wall -Wextra -Wformat -Wformat-security -Wno-unused-parameter \
