--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 *.tar.gz
 
 *.exe
-src/bitcoin
-src/bitcoind
-src/bitcoin-cli
-src/test/test_bitcoin
-src/qt/test/test_bitcoin-qt
+src/flappycoin
+src/flappycoind
+src/flappycoin-cli
+src/test/test_flappycoin
+src/qt/test/test_flappycoin-qt
 
 Makefile.in
 aclocal.m4
@@ -13,8 +13,8 @@ autom4te.cache/
 config.log
 config.status
 configure
-src/config/bitcoin-config.h
-src/config/bitcoin-config.h.in
+src/config/flappycoin-config.h
+src/config/flappycoin-config.h.in
 src/config/stamp-h1
 src/build-aux/
 share/setup.nsi
@@ -36,7 +36,7 @@ src/qt/test/moc*.cpp
 *.o
 *.o-*
 *.patch
-.bitcoin
+.flappycoin
 *.a
 *.pb.cc
 *.pb.h
@@ -51,12 +51,12 @@ src/qt/test/moc*.cpp
 # Compilation and Qt preprocessor part
 *.qm
 Makefile
-bitcoin-qt
-Bitcoin-Qt.app
+flappycoin-qt
+flappycoin-qt.app
 
 # Unit-tests
 Makefile.test
-bitcoin-qt_test
+flappycoin-qt_test
 
 # Resources cpp
 qrc_*.cpp
@@ -71,7 +71,7 @@ build
 #lcov
 *.gcno
 /*.info
-test_bitcoin.coverage/
+test_flappycoin.coverage/
 total.coverage/
 coverage_percent.txt
 
@@ -79,7 +79,8 @@ coverage_percent.txt
 linux-coverage-build
 linux-build
 win32-build
-qa/pull-tester/run-bitcoind-for-test.sh
+qa/pull-tester/run-flappycoind-for-test.sh
 qa/pull-tester/build-tests.sh
 
 !src/leveldb*/Makefile
+.qmake.stash
